--- a/index.html
+++ b/index.html
@@ -211,21 +211,21 @@
                             "portfolio-v1": { type: "link", url: "https://v1.yourwebsite.com" }
                         }
                     },
-                    "about.md": {
-                        type: "file",
-                        content: "Hi! I'm a developer who loves CLI tools.\nThis site is built with vanilla HTML/JS to mimic a terminal.\nType 'help' to see available commands."
-                    },
-                    "contact.txt": {
-                        type: "file",
-                        content: "Email: dev@example.com\nTwitter: @yourhandle\nGitHub: github.com/yourusername"
-                    },
-                    "resume.pdf": {
-                        type: "link",
-                        url: "/assets/resume.pdf"
-                    }
-                }
-            }
-        };
+        //             "about.md": {
+        //                 type: "file",
+        //                 content: "Hi! I'm a developer who loves CLI tools.\nThis site is built with vanilla HTML/JS to mimic a terminal.\nType 'help' to see available commands."
+        //             },
+        //             "contact.txt": {
+        //                 type: "file",
+        //                 content: "Email: dev@example.com\nTwitter: @yourhandle\nGitHub: github.com/yourusername"
+        //             },
+        //             "resume.pdf": {
+        //                 type: "link",
+        //                 url: "/assets/resume.pdf"
+        //             }
+        //         }
+        //     }
+        // };
 
 
         // --- STATE MANAGEMENT ---
