--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
                             "portfolio-v1": { type: "link", url: "https://v1.yourwebsite.com" }
                         }
                     },
+                    "site": {
+                      type: "link",
+                      url: https://sashoksubbiah.github.io/blog/research-paper/GFS/""
+               },
         //             "about.md": {
         //                 type: "file",
         //                 content: "Hi! I'm a developer who loves CLI tools.\nThis site is built with vanilla HTML/JS to mimic a terminal.\nType 'help' to see available commands."
