--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     },
                     "site": {
                       type: "link",
-                      url:"/research-paper/GFS/"
+                      url:"https://sashoksubbiah.github.io/blog/research-paper/GFS/"
                }
         //             "about.md": {
         //                 type: "file",
